remove hosts from example config

--- a/config/jdklogging.properties
+++ b/config/jdklogging.properties
@@ -1,8 +1,8 @@
 #Example java.util.logging configuration using a Splunk REST Handler  or Splunk Raw TCP Appender
 
 #handlers = java.util.logging.ConsoleHandler
-handlers = com.splunk.logging.jdk.handler.SplunkRestHandler
-#handlers = com.splunk.logging.jdk.handler.SplunkRawTCPHandler
+#handlers = com.splunk.logging.jdk.handler.SplunkRestHandler
+handlers = com.splunk.logging.jdk.handler.SplunkRawTCPHandler
 
 # Set the default logging level for the root logger
 .level = INFO
@@ -25,8 +25,8 @@ com.splunk.logging.jdk.handler.SplunkRestHandler.dropEventsOnQueueFull=false
 
 # Set the default logging level for new SplunkRawTCPHandler instances
 com.splunk.logging.jdk.handler.SplunkRawTCPHandler.level=INFO
-com.splunk.logging.jdk.handler.SplunkRawTCPHandler.host=localhost
-com.splunk.logging.jdk.handler.SplunkRawTCPHandler.port=5150
+com.splunk.logging.jdk.handler.SplunkRawTCPHandler.host=somehost
+com.splunk.logging.jdk.handler.SplunkRawTCPHandler.port=5151
 com.splunk.logging.jdk.handler.SplunkRawTCPHandler.maxQueueSize=5MB
 com.splunk.logging.jdk.handler.SplunkRawTCPHandler.dropEventsOnQueueFull=false
 
