--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.splunk</groupId>
-	<artifactId>logging</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<groupId>splunkjavalogging</groupId>
+	<artifactId>splunklogging</artifactId>
+	<version>1.2</version>
 	<name>Splunk Java Logging Framework</name>
 	<description>The purpose of this project is to create a logging framework to allow developers to as seamlessly as possible integrate Splunk best practice logging semantics into their code. There are also custom handler/appender implementations for the 3 most prevalent Java logging frameworks in play.</description>
 	<organization>
