--- a/config/jdklogging.properties
+++ b/config/jdklogging.properties
@@ -30,6 +30,20 @@ com.splunk.logging.jdk.handler.SplunkRawTCPHandler.port=5151
 com.splunk.logging.jdk.handler.SplunkRawTCPHandler.maxQueueSize=5MB
 com.splunk.logging.jdk.handler.SplunkRawTCPHandler.dropEventsOnQueueFull=false
 
+# Set the default logging level for new SplunkHECHandler instances
+com.splunk.logging.jdk.handler.SplunkHECHandler.level=INFO
+com.splunk.logging.jdk.handler.SplunkHECHandler.host=somehost
+com.splunk.logging.jdk.handler.SplunkHECHandler.port=8088
+com.splunk.logging.jdk.handler.SplunkHECHandler.token=YOURTOKEN
+com.splunk.logging.jdk.handler.SplunkHECHandler.https=false
+com.splunk.logging.jdk.handler.SplunkHECHandler.poolsize=1
+com.splunk.logging.jdk.handler.SplunkHECHandler.index=main
+com.splunk.logging.jdk.handler.SplunkHECHandler.source=foo
+com.splunk.logging.jdk.handler.SplunkHECHandler.sourcetype=bar
+com.splunk.logging.jdk.handler.SplunkHECHandler.maxQueueSize=5MB
+com.splunk.logging.jdk.handler.SplunkHECHandler.dropEventsOnQueueFull=false
+
+
 # Set the default logging level for new ConsoleHandler instances
 java.util.logging.ConsoleHandler.level = INFO
 java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
