--- a/config/jdklogging.properties
+++ b/config/jdklogging.properties
@@ -1,8 +1,9 @@
-#Example java.util.logging configuration using a Splunk REST Handler  or Splunk Raw TCP Appender
+#Example java.util.logging configuration using a Splunk HEC Handler,Splunk REST Handler  or Splunk Raw TCP Appender
 
 #handlers = java.util.logging.ConsoleHandler
 #handlers = com.splunk.logging.jdk.handler.SplunkRestHandler
-handlers = com.splunk.logging.jdk.handler.SplunkRawTCPHandler
+#handlers = com.splunk.logging.jdk.handler.SplunkRawTCPHandler
+handlers = com.splunk.logging.jdk.handler.SplunkHECHandler
 
 # Set the default logging level for the root logger
 .level = INFO
