--- a/config/log4j.properties
+++ b/config/log4j.properties
@@ -1,10 +1,10 @@
-#Example log4j configuration using a Splunk REST Appender or Splunk Raw TCP Appender
+#Example log4j configuration using a Splunk HEC Appender, Splunk REST Appender or Splunk Raw TCP Appender
 
 # Root logger option
 log4j.rootLogger=DEBUG,stdout
 
 #Splunk logger
-log4j.logger.splunk.logger=INFO, splunkrest
+log4j.logger.splunk.logger=INFO, splunkhec
 #log4j.logger.splunk.logger=INFO, splunkrawtcp
 log4j.additivity.splunk.logger=false
  
