--- a/.classpath
+++ b/.classpath
@@ -20,5 +20,6 @@
 	<classpathentry kind="lib" path="lib/httpcore-nio-4.4.1.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-api-2.3.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-core-2.3.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-slf4j-impl-2.3.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
