--- a/config/jdklogging.properties
+++ b/config/jdklogging.properties
@@ -33,14 +33,14 @@ com.splunk.logging.jdk.handler.SplunkRawTCPHandler.dropEventsOnQueueFull=false
 
 # Set the default logging level for new SplunkHECHandler instances
 com.splunk.logging.jdk.handler.SplunkHECHandler.level=INFO
-com.splunk.logging.jdk.handler.SplunkHECHandler.host=somehost
+com.splunk.logging.jdk.handler.SplunkHECHandler.host=localhost
 com.splunk.logging.jdk.handler.SplunkHECHandler.port=8088
-com.splunk.logging.jdk.handler.SplunkHECHandler.token=YOURTOKEN
+com.splunk.logging.jdk.handler.SplunkHECHandler.token=4DBFC24E-19A2-4D31-9055-2139C818DBDD
 com.splunk.logging.jdk.handler.SplunkHECHandler.https=false
 com.splunk.logging.jdk.handler.SplunkHECHandler.poolsize=1
 com.splunk.logging.jdk.handler.SplunkHECHandler.index=main
-com.splunk.logging.jdk.handler.SplunkHECHandler.source=foo
-com.splunk.logging.jdk.handler.SplunkHECHandler.sourcetype=bar
+com.splunk.logging.jdk.handler.SplunkHECHandler.source=jul
+com.splunk.logging.jdk.handler.SplunkHECHandler.sourcetype=test-data
 com.splunk.logging.jdk.handler.SplunkHECHandler.maxQueueSize=5MB
 com.splunk.logging.jdk.handler.SplunkHECHandler.dropEventsOnQueueFull=false
 
