--- a/config/log4j.properties
+++ b/config/log4j.properties
@@ -40,18 +40,18 @@ log4j.appender.splunkrawtcp.layout.ConversionPattern=%m%n
 
 # Send log events to a Splunk HEC Endpoint
 log4j.appender.splunkhec=com.splunk.logging.log4j.appender.SplunkHECAppender
-log4j.appender.splunkhec.host=somehost
+log4j.appender.splunkhec.host=localhost
 log4j.appender.splunkhec.port=8088
-log4j.appender.splunkhec.token=YOURTOKEN
+log4j.appender.splunkhec.token=4DBFC24E-19A2-4D31-9055-2139C818DBDD
 log4j.appender.splunkhec.https=false
 log4j.appender.splunkhec.poolsize=1
 log4j.appender.splunkhec.index=main
-log4j.appender.splunkhec.source=foo
-log4j.appender.splunkhec.sourcetype=bar
+log4j.appender.splunkhec.source=log4j-test
+log4j.appender.splunkhec.sourcetype=test-data
 log4j.appender.splunkhec.maxQueueSize=5MB
 log4j.appender.splunkhec.dropEventsOnQueueFull=false
 log4j.appender.splunkhec.layout=org.apache.log4j.PatternLayout
-log4j.appender.splunkhec.layout.ConversionPattern=%m%n
+log4j.appender.splunkhec.layout.ConversionPattern=%m
 
 
 #Console appender
