--- a/config/jdklogging.properties
+++ b/config/jdklogging.properties
@@ -43,6 +43,10 @@ com.splunk.logging.jdk.handler.SplunkHECHandler.source=jul
 com.splunk.logging.jdk.handler.SplunkHECHandler.sourcetype=test-data
 com.splunk.logging.jdk.handler.SplunkHECHandler.maxQueueSize=5MB
 com.splunk.logging.jdk.handler.SplunkHECHandler.dropEventsOnQueueFull=false
+com.splunk.logging.jdk.handler.SplunkHECHandler.batchMode=true
+com.splunk.logging.jdk.handler.SplunkHECHandler.maxBatchSizeBytes=1MB
+com.splunk.logging.jdk.handler.SplunkHECHandler.maxBatchSizeEvents=5
+com.splunk.logging.jdk.handler.SplunkHECHandler.maxInactiveTimeBeforeBatchFlush=5000
 
 
 # Set the default logging level for new ConsoleHandler instances
