--- a/config/log4j.properties
+++ b/config/log4j.properties
@@ -50,6 +50,10 @@ log4j.appender.splunkhec.source=log4j-test
 log4j.appender.splunkhec.sourcetype=test-data
 log4j.appender.splunkhec.maxQueueSize=5MB
 log4j.appender.splunkhec.dropEventsOnQueueFull=false
+log4j.appender.splunkhec.batchMode=true
+log4j.appender.splunkhec.maxBatchSizeBytes=1MB
+log4j.appender.splunkhec.maxBatchSizeEvents=5
+log4j.appender.splunkhec.maxInactiveTimeBeforeBatchFlush=5000
 log4j.appender.splunkhec.layout=org.apache.log4j.PatternLayout
 log4j.appender.splunkhec.layout.ConversionPattern=%m
 
